--- a/src/main/resources/static/projectSkeleton/html/details.html
+++ b/src/main/resources/static/projectSkeleton/html/details.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+
     <link rel="icon" href="../images/ace-of-spades.png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -14,15 +17,26 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="../css/details.css"/>
-    <title>Victory</title>
 
+    <script src="https://kit.fontawesome.com/b18db754f0.js" crossorigin="anonymous"></script>
+
+    <script src="../js/sidebar.js" type="module"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="../css/details.css"/>
+
+    <title>Victory</title>
 </head>
 <body>
+
 <header>
-    <nav id="nav">
+    <nav id="nav" class="navbar navbar-expand">
 
         <a href="/"><img src="../images/emblem.png"></a>
+
         <ul id="menu">
             <li><a href="/catalog">Catalog</a></li>
             <li><a href="/search">Offers</a></li>
@@ -36,193 +50,93 @@
             </span>
         </ul>
 
-        <button id="hamburger">&#9776;</button>
+        <a href="#" id="menu-toggle" class="navbar-brand">&#9776</a>
     </nav>
 </header>
 
-<main id="main">
+<div id="wrapper">
+    <div id="sidebar-wrapper">
+        <ul class="sidebar-nav">
+            <li><a href="#">Catalog</a></li>
+            <li><a href="#">Offers</a></li>
+            <li><a href="#">Login</a></li>
+            <li><a href="#">Register</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Wishlist</a></li>
+            <li><a href="#">Logout</a></li>
+        </ul>
+    </div>
+</div>
+
+<main>
 
     <div class="container">
-        <!-- product -->
-        <div class="product-content product-wrap clearfix product-detail">
-            <div class="row">
-                <div class="col-md-5 col-sm-12 col-xs-12">
-                    <div class="product-image">
-                        <div id="myCarousel-2" class="carousel slide">
-                            <ol class="carousel-indicators">
-                                <li data-target="#myCarousel-2" data-slide-to="0" class=""></li>
-                                <li data-target="#myCarousel-2" data-slide-to="1" class="active"></li>
-                                <li data-target="#myCarousel-2" data-slide-to="2" class=""></li>
-                            </ol>
-                            <div class="carousel-inner">
-                                <!-- Slide 1 -->
-                                <div class="item active">
-                                    <img src="https://via.placeholder.com/700x400/FFB6C1/000000" class="img-responsive" alt="" />
-                                </div>
-<!--                                &lt;!&ndash; Slide 2 &ndash;&gt;-->
-<!--                                <div class="item">-->
-<!--                                    <img src="https://via.placeholder.com/700x400/87CEFA/000000" class="img-responsive" alt="" />-->
-<!--                                </div>-->
-<!--                                &lt;!&ndash; Slide 3 &ndash;&gt;-->
-<!--                                <div class="item">-->
-<!--                                    <img src="https://via.placeholder.com/700x400/B0C4DE/000000" class="img-responsive" alt="" />-->
-<!--                                </div>-->
-                            </div>
-                            <a class="left carousel-control" href="#myCarousel-2" data-slide="prev"> <span class="glyphicon glyphicon-chevron-left"></span> </a>
-                            <a class="right carousel-control" href="#myCarousel-2" data-slide="next"> <span class="glyphicon glyphicon-chevron-right"></span> </a>
-                        </div>
+        <div class="card">
+            <div class="card-body">
+                <h3 class="card-title">Rounded Chair</h3>
+                <div class="row">
+                    <div class="col-lg-5 col-md-5 col-sm-6 image-cont">
+                        <div class="white-box text-center"><img src="https://via.placeholder.com/240x300/00CED1/000000" class="img-responsive"></div>
                     </div>
-                </div>
-
-                <div class="col-md-6 col-md-offset-1 col-sm-12 col-xs-12">
-                    <h2 class="name">
-                        Product Name Title Here
-                        <small>Product by <a href="javascript:void(0);">Adeline</a></small>
-                        <i class="fa fa-star fa-2x text-primary"></i>
-                        <i class="fa fa-star fa-2x text-primary"></i>
-                        <i class="fa fa-star fa-2x text-primary"></i>
-                        <i class="fa fa-star fa-2x text-primary"></i>
-                        <i class="fa fa-star fa-2x text-muted"></i>
-                        <span class="fa fa-2x"><h5>(109) Votes</h5></span>
-                        <a href="javascript:void(0);">109 customer reviews</a>
-                    </h2>
-                    <hr />
-                    <h3 class="price-container">
-                        $129.54
-<!--                        <small>*includes tax</small>-->
-                    </h3>
-<!--                    <div class="certified">-->
-<!--                        <ul>-->
-<!--                            <li>-->
-<!--                                <a href="javascript:void(0);">Delivery time<span>7 Working Days</span></a>-->
-<!--                            </li>-->
-<!--                            <li>-->
-<!--                                <a href="javascript:void(0);">Certified<span>Quality Assured</span></a>-->
-<!--                            </li>-->
-<!--                        </ul>-->
-<!--                    </div>-->
-                    <hr />
-                    <div class="description description-tabs">
-                        <ul id="myTab" class="nav nav-pills">
-                            <li class="active"><a href="#more-information" data-toggle="tab" class="no-margin">Product Description </a></li>
-                            <li class=""><a href="#specifications" data-toggle="tab">Specifications</a></li>
-                            <li class=""><a href="#reviews" data-toggle="tab">Reviews</a></li>
-                        </ul>
-                        <div id="myTabContent" class="tab-content">
-                            <div class="tab-pane fade active in" id="more-information">
-                                <br />
-                                <strong>Description Title</strong>
-                                <p>
-                                    Integer egestas, orci id condimentum eleifend, nibh nisi pulvinar eros, vitae ornare massa neque ut orci. Nam aliquet lectus sed odio eleifend, at iaculis dolor egestas. Nunc elementum pellentesque augue
-                                    sodales porta. Etiam aliquet rutrum turpis, feugiat sodales ipsum consectetur nec.
-                                </p>
-                            </div>
-                            <div class="tab-pane fade" id="specifications">
-                                <br />
-                                <dl class="">
-                                    <dt>Gravina</dt>
-                                    <dd>Etiam porta sem malesuada magna mollis euismod.</dd>
-                                    <dd>Donec id elit non mi porta gravida at eget metus.</dd>
-                                    <dd>Eget lacinia odio sem nec elit.</dd>
-                                    <br />
-
-                                    <dt>Test lists</dt>
-                                    <dd>A description list is perfect for defining terms.</dd>
-                                    <br />
-
-                                    <dt>Altra porta</dt>
-                                    <dd>Vestibulum id ligula porta felis euismod semper</dd>
-                                </dl>
-                            </div>
-                            <div class="tab-pane fade" id="reviews">
-                                <br />
-                                <form method="post" class="well padding-bottom-10" onsubmit="return false;">
-                                    <textarea rows="2" class="form-control" placeholder="Write a review"></textarea>
-                                    <div class="margin-top-10">
-                                        <button type="submit" class="btn btn-sm btn-primary pull-right">
-                                            Submit Review
-                                        </button>
-<!--                                        <a href="javascript:void(0);" class="btn btn-link profile-link-btn" rel="tooltip" data-placement="bottom" title="" data-original-title="Add Location"><i class="fa fa-location-arrow"></i></a>-->
-<!--                                        <a href="javascript:void(0);" class="btn btn-link profile-link-btn" rel="tooltip" data-placement="bottom" title="" data-original-title="Add Voice"><i class="fa fa-microphone"></i></a>-->
-<!--                                        <a href="javascript:void(0);" class="btn btn-link profile-link-btn" rel="tooltip" data-placement="bottom" title="" data-original-title="Add Photo"><i class="fa fa-camera"></i></a>-->
-<!--                                        <a href="javascript:void(0);" class="btn btn-link profile-link-btn" rel="tooltip" data-placement="bottom" title="" data-original-title="Add File"><i class="fa fa-file"></i></a>-->
-                                    </div>
-                                </form>
-
-                                <div class="chat-body no-padding profile-message">
-                                    <ul>
-                                        <li class="message">
-                                            <img src="https://bootdey.com/img/Content/avatar/avatar1.png" class="online" />
-                                            <span class="message-text">
-                                            <a href="javascript:void(0);" class="username">
-                                                Alisha Molly
-                                                <span class="badge">Purchase Verified</span>
-                                                <span class="pull-right">
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-muted"></i>
-                                                </span>
-                                            </a>
-                                            Can't divide were divide fish forth fish to. Was can't form the, living life grass darkness very image let unto fowl isn't in blessed fill life yielding above all moved
-                                        </span>
-                                            <ul class="list-inline font-xs">
-                                                <li>
-                                                    <a href="javascript:void(0);" class="text-info"><i class="fa fa-thumbs-up"></i> This was helpful (22)</a>
-                                                </li>
-                                                <li class="pull-right">
-                                                    <small class="text-muted pull-right ultra-light"> Posted 1 year ago </small>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                        <li class="message">
-                                            <img src="https://bootdey.com/img/Content/avatar/avatar2.png" class="online" />
-                                            <span class="message-text">
-                                            <a href="javascript:void(0);" class="username">
-                                                Aragon Zarko
-                                                <span class="badge">Purchase Verified</span>
-                                                <span class="pull-right">
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                    <i class="fa fa-star fa-2x text-primary"></i>
-                                                </span>
-                                            </a>
-                                            Excellent product, love it!
-                                        </span>
-                                            <ul class="list-inline font-xs">
-                                                <li>
-                                                    <a href="javascript:void(0);" class="text-info"><i class="fa fa-thumbs-up"></i> This was helpful (22)</a>
-                                                </li>
-                                                <li class="pull-right">
-                                                    <small class="text-muted pull-right ultra-light"> Posted 1 year ago </small>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
+                    <div class="col-lg-7 col-md-7 col-sm-6 description-details">
+                        <h4 class="box-title mt-5">Product description</h4>
+                        <p>Lorem Ipsum available,but the majority have suffered alteration in some form,by injected humour,or randomised words which don't look even slightly believable.but the majority have suffered alteration in some form,by injected humour</p>
+                        <h2 class="mt-5">
+                            $153
+                        </h2>
+                        <button class="btn btn-dark btn-rounded mr-1 heart-btn liked" data-toggle="tooltip" title="" data-original-title="Add to cart">
+                            <i class="fa-solid fa-heart"></i>
+                        </button>
+                        <button class="btn btn-dark btn-rounded mr-1 carted" data-toggle="tooltip" title="" data-original-title="Add to cart">
+                            <i class="fa fa-shopping-cart"></i>
+                        </button>
+                        <button class="btn btn-primary btn-rounded buy-btn"><a href="#">Buy Now</a></button>
                     </div>
-                    <hr />
-                    <div class="row">
-                        <div class="col-sm-12 col-md-6 col-lg-6">
-                            <a href="javascript:void(0);" class="btn btn-success btn-lg" id="shop-btn">Add to cart ($129.54)</a>
-                        </div>
-                        <div class="col-sm-12 col-md-6 col-lg-6">
-                            <div class="btn-group pull-right">
-                                <button class="btn btn-white btn-default additional-func"><i class="fa fa-star"></i> Add to wishlist</button>
-                                <button class="btn btn-white btn-default additional-func"><i class="fa fa-envelope"></i> Message Seller</button>
-                            </div>
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <h3 class="box-title mt-5">General Info</h3>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-product">
+                                <tbody>
+                                <tr>
+                                    <td>Title</td>
+                                    <td>Stellar</td>
+                                </tr>
+                                <tr>
+                                    <td>Distributor</td>
+                                    <td>Knock Down</td>
+                                </tr>
+                                <tr>
+                                    <td>Creator</td>
+                                    <td>Yes</td>
+                                </tr>
+                                <tr>
+                                    <td>Recommended price</td>
+                                    <td>Office Chair</td>
+                                </tr>
+                                <tr>
+                                    <td>Country</td>
+                                    <td>Office Chair</td>
+                                </tr>
+                                <tr>
+                                    <td>Categories</td>
+                                    <td>Office Chair</td>
+                                </tr>
+                                <tr>
+                                    <td>Offers</td>
+                                    <td>Office Chair</td>
+                                </tr>
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- end product -->
     </div>
+
 </main>
+
+<footer>&copy Victory 2022. All rights reserved.</footer>
+
 </body>
 </html>
